vmTestbase/nsk/jvmti/RedefineClasses/StressRedefine/TestDescription.java crash intermittently

XMLWordPrintable

    • b28

        vmTestbase/nsk/jvmti/RedefineClasses/StressRedefine/TestDescription.java crash intermittently when run with -XX:-TieredCompilation

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (./open/src/hotspot/share/interpreter/interpreterRuntime.cpp:879), pid=51380, tid=48196
        # guarantee((retry_count++ < 100)) failed: Could not resolve to latest version of redefined method
        #
        # JRE version: Java(TM) SE Runtime Environment (14.0.2+4) (build 14.0.2+4-36)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (14.0.2+4-36, compiled mode, sharing, compressed oops, g1 gc, windows-amd64)
        # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti\\scratch\\3\\hs_err_pid51380.mdmp
        #
        # An error report file with more information is saved as:
        # T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti\\scratch\\3\\hs_err_pid51380.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

              Assignee:
              Coleen Phillimore
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: