8257993: vmTestbase/nsk/jvmti/RedefineClasses/StressRedefine/TestDescription.java crash intermittently

Reviewed-by: mdoerr
Backport-of: 0a3e446ad95b09de2facee7107f7c1206339ee0d